# patch-kit

./: .gitignore  LICENSE  README.md  patch_kit.py  pyproject.toml  requirements.txt
src/patch_kit/: __init__.py  cli.py  core.py  diffing.py  errors.py  fs.py  installer.py  metadata.py  overlay.py  patch_apply.py  types.py
