[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-kit"
version = "0.1.0"
description = "Create and apply local patches to installed Python distributions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anas Saradar" }]
dependencies = [
  "patch>=1.16",
]

[project.scripts]
patch_kit = "patch_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]